Add musics & fix some stuff

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                     <div class="select-audio-content">
                         <select name="audio-list" id="audio-list" class="audio-list">
                             <option selected disabled value="">Select Music to Play</option>
-                            <option value="calm_peacefull">Calm & Peacefull</option>
+                            <option value="calm_music">Calm & Peacefull</option>
+                            <option value="Anya">Anya</option>
+                            <option value="Nyanpasu">Nyanpasu</option>
+                            <option value="Screwed">Screwed</option>
                         </select>
                     </div>
                     <div class="heading-content">
